# wedding-backend

./: .bazelrc  .env  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  docker.sh  go.mod  go.sum  insomnia_wishlist_api.yaml
tools/scripts/: debug.sh  get_workspace_status.py
wishlist/: BUILD.bazel  main.go
wishlist/controllers/: BUILD.bazel  email.go  item.go  transaction.go
wishlist/models/: BUILD.bazel  email.go  errors.go  item.go  startup.go  transaction.go
wishlist/models/sendinblue/: BUILD.bazel  email.go
wishlist/models/sql/: BUILD.bazel  item.go  startup.go  transaction.go
wishlist/routes/: BUILD.bazel  email.go  item.go  transaction.go
wishlist/routes/middlewares/: BUILD.bazel  basic_auth.go
wishlist/utils/: BUILD.bazel  sendinblue.go  sql.go  utils.go
