load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/supercairos/wedding-backend
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
