load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wishlist_lib",
    srcs = ["main.go"],
    importpath = "github.com/supercairos/wedding-backend/wishlist",
    visibility = ["//visibility:private"],
    deps = [
        "//wishlist/routes",
        "//wishlist/utils",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_contrib_zap//:zap",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "wishlist",
    embed = [":wishlist_lib"],
    visibility = ["//visibility:public"],
)
