load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middlewares",
    srcs = ["basic_auth.go"],
    importpath = "github.com/supercairos/wedding-backend/wishlist/routes/middlewares",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_zap//:zap",
    ],
)
